# frame-presence

./: CHANGELOG.md  Cargo.toml  README.md
src/: device_registry.rs  lib.rs  session_store.rs  sessions.rs
