[package]
name = "frame-presence"
version = "0.2.0"
edition = "2021"
authors = ["Magnus Trent <magnus@blackfall.dev>"]
license = "MIT"
repository = "https://github.com/Blackfall-Labs/frame-presence"
description = "Session tracking and device fingerprinting for AI systems"
keywords = ["session", "device-fingerprint", "authentication", "context", "ai"]
categories = ["authentication", "web-programming"]

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# frame-catalog for Database trait
frame-catalog = "0.2"

# Error handling
thiserror = "2.0"

# System info
num_cpus = "1.16"
hostname = "0.4"

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3.0"
